WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171636
[Cocoa] CTFontDescriptorCreateMatchingFontDescriptor() is not case insensitive
https://bugs.webkit.org/show_bug.cgi?id=171636
Summary
[Cocoa] CTFontDescriptorCreateMatchingFontDescriptor() is not case insensitive
Myles C. Maxfield
Reported
2017-05-03 17:03:00 PDT
[Cocoa] CTFontDescriptorCreateMatchingFontDescriptor() is not case insensitive
Attachments
Patch
(2.59 KB, patch)
2017-05-03 17:07 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(4.82 KB, patch)
2017-05-05 11:04 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews116 for mac-elcapitan
(1.53 MB, application/zip)
2017-05-05 12:13 PDT
,
Build Bot
no flags
Details
Patch for committing
(6.03 KB, patch)
2017-05-05 12:33 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(6.03 KB, patch)
2017-05-05 13:21 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(6.82 KB, patch)
2017-05-05 18:19 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(6.97 KB, patch)
2017-05-06 10:30 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(6.98 KB, patch)
2017-05-06 10:45 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-05-03 17:07:42 PDT
Created
attachment 308989
[details]
Patch
Myles C. Maxfield
Comment 2
2017-05-03 17:08:42 PDT
<
rdar://problem/30811218
>
Myles C. Maxfield
Comment 3
2017-05-05 11:04:47 PDT
Created
attachment 309185
[details]
Patch
Myles C. Maxfield
Comment 4
2017-05-05 11:06:14 PDT
Comment on
attachment 309185
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309185&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=171636
<
rdar://problem/30811218
>
Myles C. Maxfield
Comment 5
2017-05-05 11:07:57 PDT
Comment on
attachment 309185
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309185&action=review
> Source/WebCore/platform/graphics/mac/FontCacheMac.mm:121 > + RetainPtr<CTFontDescriptorRef> lastResort = adoptCF(CTFontDescriptorCreateWithNameAndSize(CFSTR("LastResort"), size));
I should probably just use CTFontCreateWithName() instead.
Build Bot
Comment 6
2017-05-05 12:13:08 PDT
Comment on
attachment 309185
[details]
Patch
Attachment 309185
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3680222
Number of test failures exceeded the failure limit.
Build Bot
Comment 7
2017-05-05 12:13:09 PDT
Created
attachment 309196
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 8
2017-05-05 12:33:32 PDT
Created
attachment 309198
[details]
Patch for committing
Myles C. Maxfield
Comment 9
2017-05-05 13:21:29 PDT
Created
attachment 309202
[details]
Patch for committing
WebKit Commit Bot
Comment 10
2017-05-05 14:55:02 PDT
Comment on
attachment 309202
[details]
Patch for committing Clearing flags on attachment: 309202 Committed
r216275
: <
http://trac.webkit.org/changeset/216275
>
Ryan Haddad
Comment 11
2017-05-05 15:30:06 PDT
Reverted
r216275
for reason: This change broke internal builds. Committed
r216278
: <
http://trac.webkit.org/changeset/216278
>
Myles C. Maxfield
Comment 12
2017-05-05 18:19:20 PDT
Created
attachment 309254
[details]
Patch for committing
Myles C. Maxfield
Comment 13
2017-05-06 10:30:09 PDT
Created
attachment 309284
[details]
Patch for committing
Myles C. Maxfield
Comment 14
2017-05-06 10:45:52 PDT
Created
attachment 309288
[details]
Patch
WebKit Commit Bot
Comment 15
2017-05-06 22:43:33 PDT
Comment on
attachment 309288
[details]
Patch Clearing flags on attachment: 309288 Committed
r216342
: <
http://trac.webkit.org/changeset/216342
>
WebKit Commit Bot
Comment 16
2017-05-06 22:43:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug