[Cocoa] CTFontDescriptorCreateMatchingFontDescriptor() is not case insensitive https://bugs.webkit.org/show_bug.cgi?id=171636 <rdar://problem/30811218>

Reviewed by Dean Jackson.

Source/WebCore:

LastResort is the only name which needs to be looked up case-sensitively. We can handle
this in our existing function which handles special font names (like -apple-system) to
make sure that we always do the right thing.

Test: fast/text/lastResort.html

* platform/spi/cocoa/CoreTextSPI.h:
* platform/graphics/ios/FontCacheIOS.mm:
(WebCore::platformFontWithFamilySpecialCase):
* platform/graphics/mac/FontCacheMac.mm:
(WebCore::platformFontWithFamilySpecialCase):

LayoutTests:

* fast/text/lastResort-expected.html: Added.
* fast/text/lastResort.html: Added.


Canonical link: https://commits.webkit.org/188653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216275 268f45cc-cd09-0410-ab3c-d52691b4dbfc